# autoresearch-robotics

./: .gitignore  README.md  evaluate.py  experiment_history.json  human_feedback.json  literature_notes.md  prepare.py  program.md  pyproject.toml  results.tsv  train.py  visual_feedback.txt
core/: evaluate.py  program.md.template  train.py
templates/gym/pendulum/: evaluate.py  prepare.py  program.md.template  pyproject.toml
templates/libero/lift/: prepare.py
templates/mujoco/fetchpickplace/: prepare.py
