[project]
name = "autoresearch-robotics"
version = "0.1.0"
description = "Autonomous robotics research with visual feedback"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "gymnasium>=1.0",
    "gymnasium-robotics>=1.3",
    "mujoco>=3.0",
    "numpy>=1.26",
    "imageio[ffmpeg]>=2.34",
    "Pillow>=10.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
